# app-celo-spender

./: .clang-format  .gitignore  Makefile  README.md  apdu.md  docker-compose.yml  gdb.sh  ledger_app.toml  output.txt  pytest.ini
.doxygen/: Doxyfile
doc/: ethapp.asc  provideERC20TokenInformation.txt
examples/: signTx.py
src/: app_main.c  celo.c  celo.h  chainConfig.h  constants.h  globals.h  ledger_pki.c  main.c  manage_asset_info.h  network.c  network.h  partial apdus for test_gcs  public_keys.h  sw.h  tlv_apdu.c  tokens.c  tokens.h  types.h  ui_bagl.c  ui_blue.c  ui_blue.h  ui_common.c  ui_common.h  ui_confirm_selector_nbgl.c  ui_display_public_nbgl.c  ui_flow.c  ui_flow.h  ui_nanos.c  ui_nanos.h  ui_settings_nbgl.c  ui_sign_nbgl.c  ui_tx_nbgl.c  utils.c  utils.h
src_common/: rlp.c  (+8 more)
tests/: CMakeLists.txt  test_tx_parser.c  test_uint256.c
tests/python/: commands.txt  conftest.py  derive_addres_output.txt  requirements.txt  send_apdus_to_gdb.py  settings.py  setup.cfg  test_celo.py  test_deprecated_legacy.py  test_eip712.py  test_eth_path.py  test_gcs.py  test_sign_eip1559.py  test_sign_new_transaction.py  test_sign_transaction.py  utils.py
tests/python/abis/: celo_governance_proxy.abi.json
tests/python/apps/: celo.py  celo_command_builder.py  celo_settings.py  celo_utils.py  eth_client.py  eth_command_builder.py  eth_gcs.py  eth_proxy_info.py  eth_settings.py  eth_tlv.py  eth_tx_simu.py
tests/python/apps/eip712/: InputData.py
tests/python/eip712_input_files/: 03-long_string-data.json
tests/unit/: CMakeLists.txt  test_tx_parser.c  test_uint256.c
(+88 files in other folders)
